--- a/revive/pubspec.yaml
+++ b/revive/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   like_button: ^2.0.5
   csc_picker: ^0.2.7
   fluttertoast: ^8.2.2
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   flutter_test:
