--- a/revive/pubspec.yaml
+++ b/revive/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   flutter_svg: ^2.0.0
   rename:
   permission_handler: ^11.3.1
+  flutter_pw_validator: ^1.6.0
   syncfusion_flutter_charts: 
   path:
   image_picker:
